Программа изменена под тесты

--- a/lab4_lists.vcxproj
+++ b/lab4_lists.vcxproj
@@ -129,6 +129,13 @@
   <ItemGroup>
     <ClCompile Include="lab4_lists.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="corr1.txt" />
+    <Text Include="corr2.txt" />
+    <Text Include="incorr1.txt" />
+    <Text Include="incorr2.txt" />
+    <Text Include="incorr3.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
