--- a/lab4_lists.vcxproj
+++ b/lab4_lists.vcxproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <Text Include="corr1.txt" />
     <Text Include="corr2.txt" />
+    <Text Include="corr3.txt" />
     <Text Include="incorr1.txt" />
     <Text Include="incorr2.txt" />
     <Text Include="incorr3.txt" />
